# unitree_launcher

./: .dockerignore  .gitignore  LICENSE  LOG.md  PLAN_DOCKER.md  PLAN_METAL.md  README.md  SPEC.md  TASK.md  WORK.md  pyproject.toml
assets/policies/: beyondmimic_29dof.onnx  isaaclab_29dof.onnx  mjlab_g1.onnx  stance_29dof.onnx
assets/robots/g1/: g1_29dof.xml  scene_29dof.xml
configs/: default.yaml  g1_23dof.yaml  g1_29dof.yaml  g1_real_bm.yaml  g1_sim_bm.yaml  real.yaml  sim.yaml  unsafe.yaml
docker/: Dockerfile  docker-compose.yml
docs/: estimator_tuning.md
licenses/: RoboJuDo-LICENSE  unitree_cpp-LICENSE
scripts/: build_cpp_backend.sh  compare_sim2real.py  deploy_to_robot.sh  gantry_sim.py  get_logs_from_robot.sh  mirror_real_robot.py  replay_log.py  right_arm_reach.py  run_eval.sh  run_real.sh  run_sim.sh  setup_robot_network.sh  test_viewer.py  validate_estimator.py  validate_macos.py  wrist_validation.py
scripts/tests/: gamepad_mapping.py  test_arm_reach.py  test_dds.py  test_estimator.py  test_gantry.py  test_wrist_sinusoid.py
src/: compat.py  config.py  main.py
src/control/: controller.py  safety.py
src/logging/: logger.py  replay.py
src/policy/: base.py  beyondmimic_policy.py  isaaclab_policy.py  joint_mapper.py  observations.py
src/robot/: base.py  real_robot.py  sim_robot.py
src/unitree_launcher/: compat.py  config.py  gantry.py  main.py  mirror.py  mirror_bridge.py  recording.py  replay.py  script_utils.py  trajectory.py
src/unitree_launcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/unitree_launcher/control/: controller.py  gamepad.py  runtime.py  safety.py
src/unitree_launcher/controller/: gamepad_input.py  input.py  keyboard.py  viser_input.py  wireless.py
src/unitree_launcher/datalog/: logger.py  (+1 more)
tests/: conftest.py  test_beyondmimic_policy.py  test_compat.py  test_config.py  test_controller.py  test_cpp_real_robot.py  test_dof_config.py  test_estimator.py  test_factory.py  test_gamepad.py  test_gantry.py  test_integration.py  test_isaaclab_policy.py  test_joint_mapper.py  test_logger.py  test_main.py  test_mirror_robot.py  test_observations.py  test_real_robot.py  test_runtime.py  test_safety.py  test_safety_sim.py  test_scaffolding.py  test_sim_robot.py  test_sinusoid_policy.py  test_trajectory.py  test_viewer.py  test_viser_viewer.py
(+22 files in other folders)
